[gd_scene load_steps=22 format=3 uid="uid://c3tywn6og5g45"]

[ext_resource type="Script" path="res://heroes/corelio/corelio.gd" id="1_sr7n3"]
[ext_resource type="Material" uid="uid://brow3ato7irei" path="res://heroes/corelio/material/particles_aura_corelio.tres" id="2_o5pab"]
[ext_resource type="PackedScene" uid="uid://dvaipocthe14r" path="res://comps/scenes/damage_mgr_component.tscn" id="3_wdr0m"]
[ext_resource type="PackedScene" uid="uid://d20x3gfrmoext" path="res://comps/scenes/health_component.tscn" id="4_r40dm"]
[ext_resource type="PackedScene" uid="uid://dihqxk54qchm4" path="res://comps/scenes/ranged_b_attack_component.tscn" id="5_7e7gm"]
[ext_resource type="PackedScene" uid="uid://bid6uhyybfx4x" path="res://comps/scenes/navigation_component.tscn" id="6_iryle"]
[ext_resource type="PackedScene" uid="uid://cwhihpdu5pw3h" path="res://comps/scenes/gui_component.tscn" id="8_083vp"]
[ext_resource type="PackedScene" uid="uid://bfx1wxpmwujue" path="res://comps/scenes/sanity_component.tscn" id="9_s21jk"]
[ext_resource type="PackedScene" uid="uid://boihyru5nyiju" path="res://comps/scenes/xp_component.tscn" id="10_yik6h"]
[ext_resource type="PackedScene" uid="uid://cx88lgs15cpdr" path="res://comps/scenes/effects_component.tscn" id="11_8wv05"]
[ext_resource type="PackedScene" uid="uid://podwdpuarh5s" path="res://comps/scenes/state_machine_component.tscn" id="11_44sew"]
[ext_resource type="PackedScene" uid="uid://bb82m0a0q1pso" path="res://objs/pointer/scenes/direction_pointer.tscn" id="11_ded72"]
[ext_resource type="Script" path="res://scripts/states/HeroAliveState.gd" id="12_iv8jl"]
[ext_resource type="PackedScene" uid="uid://df4c8oi2h37jp" path="res://objs/pointer/scenes/spot_pointer.tscn" id="12_j2xbn"]
[ext_resource type="Script" path="res://scripts/states/HeroDeadState.gd" id="13_03lua"]
[ext_resource type="PackedScene" uid="uid://bt3p7cj7om1ne" path="res://objs/pointer/scenes/target_pointer.tscn" id="13_b5pmj"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ugeic"]
angle_max = 360.0
direction = Vector3(0, 1, 0)
spread = 5.0
initial_velocity_min = 1.0
initial_velocity_max = 16.0
gravity = Vector3(0, 0, 0)

[sub_resource type="QuadMesh" id="QuadMesh_86l3n"]
material = ExtResource("2_o5pab")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4rv5s"]
albedo_color = Color(0, 0.447059, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wvo1n"]
material = SubResource("StandardMaterial3D_4rv5s")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ts1b0"]

[node name="corelio" type="CharacterBody3D" node_paths=PackedStringArray("health_Comp", "dmgr", "xp_comp", "batk_comp", "fx_comp", "state_machine_comp", "q_p", "w_p", "e_p", "r_p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0)
script = ExtResource("1_sr7n3")
health_Comp = NodePath("comps/HealthComponent")
dmgr = NodePath("comps/DamageMgrComponent")
xp_comp = NodePath("comps/XPComponent")
batk_comp = NodePath("comps/RangedBAttackComponent")
fx_comp = NodePath("comps/EffectsComponent")
state_machine_comp = NodePath("comps/StateMachineComponent")
q_p = NodePath("AbilityPointers/Q")
w_p = NodePath("AbilityPointers/W")
e_p = NodePath("AbilityPointers/E")
r_p = NodePath("AbilityPointers/R")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101285, 1.14831, -0.00225324)
amount = 35
lifetime = 0.01
preprocess = 19.48
speed_scale = 0.1
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_ugeic")
draw_pass_1 = SubResource("QuadMesh_86l3n")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_wvo1n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_ts1b0")

[node name="comps" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="DamageMgrComponent" parent="comps" node_paths=PackedStringArray("health_component", "effects_component") instance=ExtResource("3_wdr0m")]
health_component = NodePath("../HealthComponent")
effects_component = NodePath("../EffectsComponent")

[node name="HealthComponent" parent="comps" node_paths=PackedStringArray("hero") instance=ExtResource("4_r40dm")]
hero = NodePath("../..")

[node name="RangedBAttackComponent" parent="comps" node_paths=PackedStringArray("nav_comp", "hero") instance=ExtResource("5_7e7gm")]
atk_damage = 10.0
atk_cooldown = 1.0
range = 6.0
nav_comp = NodePath("../NavComponent")
hero = NodePath("../..")

[node name="NavComponent" parent="comps" node_paths=PackedStringArray("hero") instance=ExtResource("6_iryle")]
desired_distance = 1.1
hero = NodePath("../..")

[node name="GUIComponent" parent="comps" node_paths=PackedStringArray("health_comp", "sanity_comp", "fx_comp") instance=ExtResource("8_083vp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73506, 0)
health_comp = NodePath("../HealthComponent")
sanity_comp = NodePath("../SanityComponent")
fx_comp = NodePath("../EffectsComponent")

[node name="SanityComponent" parent="comps" node_paths=PackedStringArray("health_comp") instance=ExtResource("9_s21jk")]
health_comp = NodePath("../HealthComponent")

[node name="XPComponent" parent="comps" node_paths=PackedStringArray("dead_state", "hero") instance=ExtResource("10_yik6h")]
dead_state = NodePath("../StateMachineComponent/HeroDeadState")
hero = NodePath("../..")

[node name="EffectsComponent" parent="comps" node_paths=PackedStringArray("battack_comp", "nav_comp", "health_comp", "sanity_comp", "hero") instance=ExtResource("11_8wv05")]
battack_comp = NodePath("../RangedBAttackComponent")
nav_comp = NodePath("../NavComponent")
health_comp = NodePath("../HealthComponent")
sanity_comp = NodePath("../SanityComponent")
hero = NodePath("../..")

[node name="StateMachineComponent" parent="comps" node_paths=PackedStringArray("initial_state") instance=ExtResource("11_44sew")]
initial_state = NodePath("HeroAliveState")

[node name="HeroAliveState" type="Node" parent="comps/StateMachineComponent" node_paths=PackedStringArray("nav", "battack", "xp_comp", "hero", "health_comp")]
script = ExtResource("12_iv8jl")
nav = NodePath("../../NavComponent")
battack = NodePath("../../RangedBAttackComponent")
xp_comp = NodePath("../../XPComponent")
hero = NodePath("../../..")
health_comp = NodePath("../../HealthComponent")

[node name="HeroDeadState" type="Node" parent="comps/StateMachineComponent" node_paths=PackedStringArray("hero")]
script = ExtResource("13_03lua")
hero = NodePath("../../..")

[node name="AbilityPointers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="Q" parent="AbilityPointers" instance=ExtResource("11_ded72")]

[node name="W" parent="AbilityPointers" instance=ExtResource("12_j2xbn")]

[node name="E" parent="AbilityPointers" instance=ExtResource("13_b5pmj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="R" parent="AbilityPointers" instance=ExtResource("11_ded72")]

[node name="PTimer" type="Timer" parent="AbilityPointers"]

[connection signal="timeout" from="AbilityPointers/PTimer" to="." method="_on_p_timer_timeout"]
